tests/valid_inputs/bin_left_shift.cpp
// test '<<'

int main() {
	return 21 << 1;
}
