tests/invalid_inputs/parsing/negative_continue_level.cpp

int main() {
	continue -1;
}
